Project1/force-app/main/default/objects/Policy__c/fields/Policy_Code__c.field-meta.xml
<CustomField>
    <fullName>Policy_Code__c</fullName>
    <label>Policy Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PolicyType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>n665</fullName>
            </value>
            <value>
                <fullName>19f</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>