Project1/force-app/main/default/objects/Policy__c/fields/Policy_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Policy_Quantity__c</fullName>
    <label>Policy Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>