Project1/force-app/main/default/objects/Policy__c/fields/PolicyOwner__c.field-meta.xml
<CustomField>
    <fullName>PolicyOwner__c</fullName>
    <label>Policy Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>