Project1/force-app/main/default/objects/Policy__c/fields/PolicyOwnerPhone__c.field-meta.xml
<CustomField>
    <fullName>PolicyOwnerPhone__c</fullName>
    <label>Policy Owner Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>