Project1/force-app/main/default/objects/Policy__c/fields/PolicyStatus__c.field-meta.xml
<CustomField>
    <fullName>PolicyStatus__c</fullName>
    <label>Policy Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IsActive__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Free-Looked</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>