Project1/force-app/main/default/objects/Policy__c/fields/PolicyType__c.field-meta.xml
<CustomField>
    <fullName>PolicyType__c</fullName>
    <label>Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health Insurance</fullName>
            </value>
            <value>
                <fullName>Life Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>