Project1/force-app/main/default/objects/Policy__c/fields/UpsellOpportunity__c.field-meta.xml
<CustomField>
    <fullName>UpsellOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upsell Opportunity</label>
    <type>Checkbox</type>
</CustomField>