Project1/force-app/main/default/objects/Policy__c/validationRules/Policy_Number_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Policy_Number_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>REGEX(PolicyOwnerPhone__c , &quot;(\\+1)?\\(?\\d{3}\\)?\\d{3}-\\d{4}&quot;)</errorConditionFormula>
    <errorDisplayField>PolicyOwnerPhone__c</errorDisplayField>
    <errorMessage>Please enter a valid phone number</errorMessage>
</ValidationRule>